Sun Sep 12 19:22:19 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_undo.c: (gE_undo_add) Nullify the redo stack after freeing it. no
	  more lockup's! yay!

Sun Sep 12 19:03:50 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_undo.c: (gE_undo_do) New function. Gets the last done item, copies
	  the data and puts the item onto the Redo stack. Then it checks whether
	  text had been inserted or deleted. We insert or delete the text as 
	  required.
	  (views_insert) New function, to insert deleted text from an undo (will also
	  work with the redo when its done).
	  (views_delete) New function, to delete inserted text done by an undo (again,
	  will work with redo too).
	  Small glitch, it seems, after an undo, when you type more than 2 characters
	  gEdit will lock up!
	
	* src/gE_undo.h: Removed pointer to the gpointer on the undo_do and redo
	  functions.. (doh!)
	
	* gE_mdi.c: Added Undo and Redo menu items to the Edit menu.

Sun Sep 12 17:28:35 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_undo.c: (gE_undo_add) New fucntion. Add's undo item to the stack.
	
	* src/gE_view.c: (doc_insert_text_cb) (doc_delete_text_cb) Added function
	  call to insert the inserted or deleted text into the undo stack.
	
	* src/Makefile.am: Added gE_undo.[ch] to the source list.
	
Sun Sep 12 16:18:18 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_undo.[ch]: Added stubs for the new undo/redo system.
	
	* src/main.h: (gE_document) Added GLists for the undo and redo stacks.

Sat Sep 11 14:12:16 BST 1999  Alex Roberts  <bse@gedit.pn.org>

	* src/gE_view.c: (auto_indent_cb) Use a gtk_editable_insert_text instead of
	  using gtk_text_insert. Now the buffer is updated properly..
	
	* makeconfig.pl: Commented out all Gmodule, ORBit, Gnorba and Zvt stuff. Which
	  was for the GModule plugins, which no longer work.. 
	  Commented out all the gmodule-plugins Makefiles
	
	* Makefile.am: Removed gmodule-plugins subdir.
	  Removed the xpm's from the dist-hook.
	  